[gd_scene load_steps=4 format=3 uid="uid://ceqi5d8mxw0vd"]

[ext_resource type="Script" path="res://scripts/unknown_cape_verifier.gd" id="1_i24e0"]
[ext_resource type="Theme" uid="uid://b1ab176jdsq1e" path="res://themes/window_theme.tres" id="1_rlcfj"]
[ext_resource type="Theme" uid="uid://cujwxpvp1qx1n" path="res://themes/mcsm.tres" id="3_sime4"]

[node name="UnknownCapeVerifier" type="Window" node_paths=PackedStringArray("cape_image", "description", "cape_selector") groups=["window"]]
title = "Unknown Capes"
initial_position = 2
size = Vector2i(700, 500)
unresizable = true
theme = ExtResource("1_rlcfj")
script = ExtResource("1_i24e0")
cape_image = NodePath("Panel/TextureRect")
description = NodePath("Label")
cape_selector = NodePath("CapeSelector")

[node name="CapeSelector" type="OptionButton" parent="."]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -38.0
offset_right = 525.0
offset_bottom = -5.0
grow_vertical = 0
theme = ExtResource("3_sime4")

[node name="EditButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -38.0
offset_right = -25.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_sime4")
text = "Edit"

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -200.0
offset_right = 325.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(250, 175)
theme = ExtResource("3_sime4")

[node name="TextureRect" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -192.0
offset_right = 144.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -325.0
offset_top = 24.0
offset_right = 325.0
offset_bottom = 50.0
grow_horizontal = 2
theme = ExtResource("3_sime4")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="CapeSelector" to="." method="_on_cape_selector_item_selected"]
[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
